# factory-pattern-task

./: CMakeLists.txt
.github/workflows/: build_and_package.yml
tests/: CMakeLists.txt  test_character.cpp  test_dragon.cpp  test_factory.cpp  test_orc.cpp  test_player.cpp
